tests/script_errors/function_already_defined/error.txt
Error: 
    5 | fn a () with
    6 |   2
    7 | end;
      | ^^^ Can't define the function `a` twice